Get the game halfway done in the console

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <button id="newGame">New game</button>
     <div>
-        <button id="first"></button>
-        <button id="second"></button>
-        <button id="third"></button>
+        <button class="play" id="first"></button>
+        <button class="play" id="second"></button>
+        <button class="play" id="third"></button>
     </div>
     <div>
-        <button id="fourth"></button>
-        <button id="fifth"></button>
-        <button id="sixth"></button>
+        <button class="play" id="fourth"></button>
+        <button class="play" id="fifth"></button>
+        <button class="play" id="sixth"></button>
     </div>
     <div>
-        <button id="seventh"></button>
-        <button id="eighth"></button>
-        <button id="nineth"></button>
+        <button class="play" id="seventh"></button>
+        <button class="play" id="eighth"></button>
+        <button class="play" id="nineth"></button>
     </div>
 </body>
 </html>
